--- a/resources/assets/sass/_adminPage.scss
+++ b/resources/assets/sass/_adminPage.scss
@@ -1,76 +1,228 @@
-.admin-container{
-	@include flex-center;	
+*{
+	font-family:bariol;
+
 }
-.admin{
-	h1{
-		font-size:3.5em;
-		font-weight:bolder;
+*:focus{
+	outline: none;
+}
+ul li {
+	list-style-type: none;
+}
+a{
+	color:white;
+}
+body{
+	background:url('/img/Music-equipment3.jpg');
+	background-size:cover;
+	background-repeat:no-repeat;
+
+}
+.sidebar-nav li a:hover{
 		color:$zuta;
-	// background:rgba(0,0,0,0.5);
-	padding:0 1em;
-	margin-bottom:0.5em;
-	}
+}
+.sidebar-brand a{
+	font-weight:bold;
+}
 
-label{
+input:-webkit-autofill {
+	-webkit-box-shadow: 0 0 0 1000px white inset !important;
+}
+input:focus:-webkit-autofill {
+	-webkit-box-shadow: 0 0 0 1000px white inset !important;
+}
+
+.tableView{
+	// margin-top:5em;
+}
+.zauzeto{
+	padding:0.5em;
+	background:$zuta;
+	color:white;
+	border-radius:3px;
+}
+thead tr th{
 	color:$zuta;
+	text-transform:capitalize;
+	font-weight:bold;
+}
+
+ td:first-child{
+	color:$zuta;
+	font-size:1.2em;
+}
+
+th,td{
+	// background-color:rgba(0,0,0,0.5)!important;
+	padding:0.8em!important;
+	text-align:center;
+	font-size:1.2em;
+	color:white;
+}
+.l-heading{
+	padding:0.5em;
+	background-color:rgba(0,0,0,0.2)!important;
+	color:white!important;
+
+
+}
+.l-panel{
 	background:rgba(0,0,0,0.8);
-	padding:0 1em;
-	margin-bottom:1em;
+	color:white;
+	border:none;
+	margin-top:5em;
+	button{
+		background:$zuta;
+		border:none;
+		&:hover{
+			background:white;
+			color:$zuta;
+		}
+	}
+}
+.l-body{
+	padding:0;
+	margin:0;
+}
+.btn__forgetPass{
+	color:$zuta;
+	border-radius:4px;
+	&:hover{
+		color:white;
+		text-decoration: none;
+		background:$crvena;
+	}
+}
+.form-control:focus{
+	border-color:$zuta;
+}
+.categories{
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+	justify-content:center;
+	height: 400px;
+	color:white;
+	font-size:2em;
+}
+.news{
+	background-color:$zuta;
+}
+.schedules{
+	background-color:$plava;
+}
+
+h1,h2{
+	color:$zuta;
+}
+h2{
+
+	// float:right;
+}
+#divLocal{
+	position: absolute;
+	top:0;
+	right:0;
+	padding:0.2em 4.5em;
+	font-size:3em;
+	color:$zuta;
+}
+
+hr{
+    border-top: 1px solid $zuta;
+}
+
+input,textarea{
+	background-color:rgba(0,0,0,0.5)!important;
+	color:white!important;
+}
+
+input[type="file"]{
+	background:$zuta;
+}
+
+article{
+	width: 60%;
+	background-color:rgba(0,0,0,0.5)!important;
+	p,span{
+		color: white;
 	}
 
-background:url('/img/Music-equipment1.jpg');
-background-size:cover;
-background-repeat:no-repeat;
-font-size:2.9em;
+	// max-resolution: resgin-top:1em;
+	
+
+	img{
+		padding:1em 0;
+	}
 }
 
-input{
-	padding:0 20px;
-	width:99%;
-	background:rgba(0,0,0,0.8);
-	margin-bottom:1em;
+.margin-reset{
+	margin:0!important;
 }
 
-input:focus{
-	background:rgba(255,255,255,0.8);
-	// color:white;
-	color:black;
-
+.yellow-color{
+	color:$zuta;
 }
-form li {
-	@include flex-center;
-	margin-bottom: 20px;
+.btn-wrapper{
+	display:flex;
+	margin-top:4em;
+	a{
+		margin-right:2em;
+	}
 }
-
-form{
-	color:white;
+.btn-yellow{
+	background:$zuta!important;
+	
+	
 }
-
-textarea{
-	// background:rgba(245,171,53,0.8);
-	background:rgba(0,0,0,0.5);
-	color:white;
-	width:inherit;
-	width:99%;
-	height: 40vh;
-	padding:20px;
-	border:4px solid white;
+.btn-delete{
+	background:$crvena!important;
+	border-color:$crvena!important;
 }
-::-webkit-input-placeholder{
-	margin-left:10px;
-	color:white;
+$activeColor: $zuta; //green
+$darkenColor: darken($activeColor, 20%);
+/* $background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/13460/dark_wall.png'); */$background: #3498db;
+/* .roundedOne */
+.roundedOne {
+  width: 28px;
+  height: 28px;
+  position: relative;
+  margin: 0 auto;
+  background: white;
+  background: linear-gradient(to bottom, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+  border-radius: 50px;
+  box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
+  label {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    position: absolute;
+    left: 4px;
+    top: 4px;
+    background: linear-gradient(to bottom, #222 0%, #45484d 100%);
+    border-radius: 50px;
+    box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,1);
+    &:after {
+      content: '';
+      width: 16px;
+      height: 16px;
+      position: absolute;
+      top: 2px;
+      left: 2px;
+      background: $activeColor;
+      background: linear-gradient(to bottom, $activeColor 0%, $darkenColor 100%);
+      opacity: 0;
+      border-radius: 50px;
+      box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0,0,0,0.5);
+    }
+    &:hover::after {
+      opacity: 0.3;
+    }
+  }
+  input[type=checkbox] {
+    visibility: hidden;
+    &:checked + label:after {
+      opacity: 1;
+    }
+  }    
 }
-
-textarea:focus{
-	background:rgba(0,0,0,0.5);
-	// color:black;
-	border:4px solid black;
-}
-
-.error{
-	padding:0 1em;
-	color:red;
-	background:rgba(0,0,0,0.9);
-	margin-top:1em;
-
-}
+/* end .roundedOne */
