--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,3 @@
-
-// Fonts
-
 // Variables
 @import "variables";
 
@@ -8,11 +5,17 @@
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
  // My files
- @import "_colors";
- @import "_mixins";
- @import "_components";
- @import "_custom_global";
- @import "_adminPage";
+ @import "colors";
+ @import "mixins";
+ @import "components";
+ @import "custom_global";
+
+// Admin
+@import "adminPage";
+
+// Partials
+@import "sidebar";
+ 
 
  .goLeft{
 
@@ -179,6 +182,7 @@ display: none;
 	transition:all 0.3s ease-in-out; 
 	transform:translateY; 
 	z-index: 2000;
+	@include flex-center;
 	&.is-showing{
 		opacity:1;
 		transform:rotateZ(0);
@@ -362,80 +366,6 @@ footer{
 
 	}
 }
-.admin-container{
-	@include flex-center;	
-}
-.admin{
-	background:url('/img/Music-equipment1.jpg');
-	background-size:cover;
-	background-repeat:no-repeat;
-	font-size:2.9em;
-	
-	h1{
-		font-size:3.5em;
-		font-weight:bolder;
-		color:$zuta;
-		padding:0 1em;
-		margin-bottom:0.5em;
-	}
-
-	label{
-		color:$zuta;
-		background:rgba(0,0,0,0.8);
-		padding:0 1em;
-		margin-bottom:1em;
-	}
-}
-
-input{
-	padding:0 20px;
-	width:99%;
-	background:rgba(0,0,0,0.8);
-	margin-bottom:1em;
-}
-
-input:focus{
-	background:rgba(255,255,255,0.8);
-	// color:white;
-	color:black;
-
-}
-form li {
-	@include flex-center;
-	margin-bottom: 20px;
-}
-
-form{
-	color:white;
-}
-
-textarea{
-	// background:rgba(245,171,53,0.8);
-	background:rgba(0,0,0,0.5);
-	color:white;
-	width:inherit;
-	width:99%;
-	height: 40vh;
-	padding:20px;
-	border:4px solid white;
-}
-::-webkit-input-placeholder{
-	margin-left:10px;
-	color:white;
-}
-
-textarea:focus{
-	background:rgba(0,0,0,0.5);
-	// color:black;
-	border:4px solid black;
-}
-
-.error{
-	padding:0 1em;
-	color:red;
-	background:rgba(0,0,0,0.9);
-	margin-top:1em;
-
-}
 
 
+// @import "_table";
