--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,3 +1,4 @@
+
 // Variables
 @import "variables";
 
@@ -174,7 +175,7 @@ display: none;
 
 .blog-post {
 	opacity: 0;
-	padding:50px 100px;
+	padding:50px 0px;
 	box-sizing:border-box;
 	background:rgba(255,255,255,0.8);
 	-webkit-transition:all 0.3s ease-in-out; 
@@ -266,19 +267,18 @@ display: none;
 }
 
 
-
+// Schedules
 
 
 #termini{
 	padding-top:80px;
+	padding-bottom:80px;
 	background:url('/img/3slikatermini.png');
 	background-repeat:no-repeat;
 	// background-attachment:fixed;
 	// height: 100vh;
 	background-size:cover;
 	@include flex-center;
-	
-
 	h1{
 		// margin-top: 95px;
 		color:white;
@@ -287,7 +287,7 @@ display: none;
 }
 #termini > :first-child{
 
-	margin-bottom:1em;
+	margin-bottom:0.5;
 	
 }
 @media (max-width:799px){
@@ -296,20 +296,26 @@ display: none;
 	}
 }
 
-.jumbotron{
+.container-jumbotron{
 	width: 100%;
 	
 	@include flex-center;
-	background-color:rgba(255,255,255,0.5);
 	h1{
 		margin: 0!important;
 		background:$plava;
 		width: 260px;
 		padding: 0;
 	}
+	td,th{
+		
+		background-color:rgba(255,255,255,0.5);
+	}
+	td:first-child{
+		color: $plava;
+	}
 }
 
-
+// contact
 
 #kontakt{
 	position: relative;
